// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Sizes iconEnd properly renders a button with an iconEnd 1`] = `
.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem 0 0.5rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4 i {
  vertical-align: middle;
}

.emotion-4:hover:enabled {
  background-color: #000;
}

.emotion-4:active:enabled {
  background-color: #134537;
}

.emotion-4:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-0 {
  margin-left: 0;
  margin-right: 0.5rem;
  vertical-align: middle;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  size="small"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button with Icon
  </span>
  <i
    className="ar ar-cr-logo emotion-2 emotion-3"
  />
</button>
`;

exports[`<Button /> Sizes iconEnd properly renders a button with an iconEnd 2`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0.5rem;
  vertical-align: middle;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4 i {
  vertical-align: middle;
}

.emotion-4:hover:enabled {
  background-color: #000;
}

.emotion-4:active:enabled {
  background-color: #134537;
}

.emotion-4:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  size="medium"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button with Icon
  </span>
  <i
    className="ar ar-cr-logo emotion-2 emotion-3"
  />
</button>
`;

exports[`<Button /> Sizes iconEnd properly renders a button with an iconEnd 3`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0.5rem;
  vertical-align: middle;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.75rem 0 1rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4 i {
  vertical-align: middle;
}

.emotion-4:hover:enabled {
  background-color: #000;
}

.emotion-4:active:enabled {
  background-color: #134537;
}

.emotion-4:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  size="large"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button with Icon
  </span>
  <i
    className="ar ar-cr-logo emotion-2 emotion-3"
  />
</button>
`;

exports[`<Button /> Sizes iconEnd properly renders a button with an iconEnd 4`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0.5rem;
  vertical-align: middle;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.75rem 0 1rem;
  height: 3rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4 i {
  vertical-align: middle;
}

.emotion-4:hover:enabled {
  background-color: #000;
}

.emotion-4:active:enabled {
  background-color: #134537;
}

.emotion-4:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  size="jumbo"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button with Icon
  </span>
  <i
    className="ar ar-cr-logo emotion-2 emotion-3"
  />
</button>
`;

exports[`<Button /> Sizes iconStart and iconEnd properly renders a button with an iconStart and an iconEdn 1`] = `
.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
}

.emotion-6 i {
  vertical-align: middle;
}

.emotion-6:hover:enabled {
  background-color: #000;
}

.emotion-6:active:enabled {
  background-color: #134537;
}

.emotion-6:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-2 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  vertical-align: middle;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  size="small"
>
  <i
    className="ar ar-cr-logo emotion-0 emotion-1"
  />
  <span
    className="emotion-2 emotion-3"
  >
    Button with Icon
  </span>
  <i
    className="ar ar-download emotion-0 emotion-1"
  />
</button>
`;

exports[`<Button /> Sizes iconStart and iconEnd properly renders a button with an iconStart and an iconEdn 2`] = `
.emotion-2 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  vertical-align: middle;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
}

.emotion-6 i {
  vertical-align: middle;
}

.emotion-6:hover:enabled {
  background-color: #000;
}

.emotion-6:active:enabled {
  background-color: #134537;
}

.emotion-6:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  size="medium"
>
  <i
    className="ar ar-cr-logo emotion-0 emotion-1"
  />
  <span
    className="emotion-2 emotion-3"
  >
    Button with Icon
  </span>
  <i
    className="ar ar-download emotion-0 emotion-1"
  />
</button>
`;

exports[`<Button /> Sizes iconStart and iconEnd properly renders a button with an iconStart and an iconEdn 3`] = `
.emotion-2 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  vertical-align: middle;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.75rem 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
}

.emotion-6 i {
  vertical-align: middle;
}

.emotion-6:hover:enabled {
  background-color: #000;
}

.emotion-6:active:enabled {
  background-color: #134537;
}

.emotion-6:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  size="large"
>
  <i
    className="ar ar-cr-logo emotion-0 emotion-1"
  />
  <span
    className="emotion-2 emotion-3"
  >
    Button with Icon
  </span>
  <i
    className="ar ar-download emotion-0 emotion-1"
  />
</button>
`;

exports[`<Button /> Sizes iconStart and iconEnd properly renders a button with an iconStart and an iconEdn 4`] = `
.emotion-2 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  vertical-align: middle;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.75rem 0 0.5rem;
  height: 3rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
}

.emotion-6 i {
  vertical-align: middle;
}

.emotion-6:hover:enabled {
  background-color: #000;
}

.emotion-6:active:enabled {
  background-color: #134537;
}

.emotion-6:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-6 emotion-7"
  disabled={false}
  size="jumbo"
>
  <i
    className="ar ar-cr-logo emotion-0 emotion-1"
  />
  <span
    className="emotion-2 emotion-3"
  >
    Button with Icon
  </span>
  <i
    className="ar ar-download emotion-0 emotion-1"
  />
</button>
`;

exports[`<Button /> Sizes iconStart properly renders a button with an iconStart 1`] = `
.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4 i {
  vertical-align: middle;
}

.emotion-4:hover:enabled {
  background-color: #000;
}

.emotion-4:active:enabled {
  background-color: #134537;
}

.emotion-4:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-2 {
  margin-left: 0.5rem;
  margin-right: 0;
  vertical-align: middle;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  size="small"
>
  <i
    className="ar ar-cr-logo emotion-0 emotion-1"
  />
  <span
    className="emotion-2 emotion-3"
  >
    Button with Icon
  </span>
</button>
`;

exports[`<Button /> Sizes iconStart properly renders a button with an iconStart 2`] = `
.emotion-2 {
  margin-left: 0.5rem;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4 i {
  vertical-align: middle;
}

.emotion-4:hover:enabled {
  background-color: #000;
}

.emotion-4:active:enabled {
  background-color: #134537;
}

.emotion-4:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  size="medium"
>
  <i
    className="ar ar-cr-logo emotion-0 emotion-1"
  />
  <span
    className="emotion-2 emotion-3"
  >
    Button with Icon
  </span>
</button>
`;

exports[`<Button /> Sizes iconStart properly renders a button with an iconStart 3`] = `
.emotion-2 {
  margin-left: 0.5rem;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 1rem 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4 i {
  vertical-align: middle;
}

.emotion-4:hover:enabled {
  background-color: #000;
}

.emotion-4:active:enabled {
  background-color: #134537;
}

.emotion-4:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  size="large"
>
  <i
    className="ar ar-cr-logo emotion-0 emotion-1"
  />
  <span
    className="emotion-2 emotion-3"
  >
    Button with Icon
  </span>
</button>
`;

exports[`<Button /> Sizes iconStart properly renders a button with an iconStart 4`] = `
.emotion-2 {
  margin-left: 0.5rem;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 1rem 0 0.5rem;
  height: 3rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-4:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4 i {
  vertical-align: middle;
}

.emotion-4:hover:enabled {
  background-color: #000;
}

.emotion-4:active:enabled {
  background-color: #134537;
}

.emotion-4:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-4 emotion-5"
  disabled={false}
  size="jumbo"
>
  <i
    className="ar ar-cr-logo emotion-0 emotion-1"
  />
  <span
    className="emotion-2 emotion-3"
  >
    Button with Icon
  </span>
</button>
`;

exports[`<Button /> Sizes properly renders a jumbo sized button 1`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0.5rem 1rem;
  height: 3rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2:hover:enabled {
  background-color: #000;
}

.emotion-2:active:enabled {
  background-color: #134537;
}

.emotion-2:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-2 emotion-3"
  disabled={false}
  size="jumbo"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> Sizes properly renders a large sized button 1`] = `
.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2:hover:enabled {
  background-color: #000;
}

.emotion-2:active:enabled {
  background-color: #134537;
}

.emotion-2:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

<button
  className="button--primary emotion-2 emotion-3"
  disabled={false}
  size="large"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> Sizes properly renders a medium sized button 1`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2:hover:enabled {
  background-color: #000;
}

.emotion-2:active:enabled {
  background-color: #134537;
}

.emotion-2:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-2 emotion-3"
  disabled={false}
  size="medium"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> Sizes properly renders a small sized button 1`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2:hover:enabled {
  background-color: #000;
}

.emotion-2:active:enabled {
  background-color: #134537;
}

.emotion-2:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-2 emotion-3"
  disabled={false}
  size="small"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> Variants properly renders a disabled minimal button 1`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2 i {
  color: #989A9C;
}

.emotion-2:hover:enabled {
  color: #0F0F10;
}

.emotion-2:hover:enabled i {
  color: #0F0F10;
}

.emotion-2:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-2:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-2:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

<button
  className="button--minimal emotion-2 emotion-3"
  disabled={true}
  size="large"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> Variants properly renders a disabled primary button 1`] = `
.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2:hover:enabled {
  background-color: #000;
}

.emotion-2:active:enabled {
  background-color: #134537;
}

.emotion-2:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

<button
  className="button--primary emotion-2 emotion-3"
  disabled={true}
  size="large"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> Variants properly renders a disabled secondary button 1`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #FFFFFF;
  color: #25272D;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2 i {
  color: #989A9C;
}

.emotion-2:enabled {
  border: 1px solid #E0E1E2;
}

.emotion-2:hover:enabled {
  border: 1px solid #5B5D61;
}

.emotion-2:hover:enabled i {
  color: #081D17;
}

.emotion-2:active:enabled {
  color: #081D17;
  background-color: #F2F2F2;
}

.emotion-2:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--secondary emotion-2 emotion-3"
  disabled={true}
  size="large"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> Variants properly renders a minimal button 1`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2 i {
  color: #989A9C;
}

.emotion-2:hover:enabled {
  color: #0F0F10;
}

.emotion-2:hover:enabled i {
  color: #0F0F10;
}

.emotion-2:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-2:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-2:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

<button
  className="button--minimal emotion-2 emotion-3"
  disabled={false}
  size="large"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> Variants properly renders a primary button 1`] = `
.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2:hover:enabled {
  background-color: #000;
}

.emotion-2:active:enabled {
  background-color: #134537;
}

.emotion-2:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

<button
  className="button--primary emotion-2 emotion-3"
  disabled={false}
  size="large"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> Variants properly renders a secondary button 1`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #FFFFFF;
  color: #25272D;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2 i {
  color: #989A9C;
}

.emotion-2:enabled {
  border: 1px solid #E0E1E2;
}

.emotion-2:hover:enabled {
  border: 1px solid #5B5D61;
}

.emotion-2:hover:enabled i {
  color: #081D17;
}

.emotion-2:active:enabled {
  color: #081D17;
  background-color: #F2F2F2;
}

.emotion-2:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--secondary emotion-2 emotion-3"
  disabled={false}
  size="large"
>
  <span
    className="emotion-0 emotion-1"
  >
    Button Label
  </span>
</button>
`;

exports[`<Button /> fullWidth properly renders a fullWidth button 1`] = `
.emotion-0 {
  margin-left: 0;
  margin-right: 0;
  vertical-align: middle;
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  border: 1px solid transparent;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.5rem;
  height: 2.5rem;
  font-size: 0.875rem;
  background-color: #081D17;
  color: #C0F9DA;
  width: 100%;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
}

.emotion-2 i {
  vertical-align: middle;
}

.emotion-2:hover:enabled {
  background-color: #000;
}

.emotion-2:active:enabled {
  background-color: #134537;
}

.emotion-2:focus:enabled {
  border: 1px solid transparent;
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

<button
  className="button--primary emotion-2 emotion-3"
  disabled={false}
  size="large"
>
  <span
    className="emotion-0 emotion-1"
  >
    Full Width
  </span>
</button>
`;
